[package]
name = "rememberd"
version = "0.1.0"
authors = ["SuperCuber <amit.gold00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.*"
actix-rt = "1.0.0"
lazy_static = "*"
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde_json = "*"